--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   },
   "keywords": [],
   "author": "",
+  "engines": { "node": ">=12.0.0 <17.5.0" },
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "mongoose": "^6.2.9"
+    "mongoose": "^6.2.0"
   }
 }
